test/should-fail/类型不向上兼容-3.j
type agent extends handle

native Handle takes nothing returns handle

function test takes nothing returns nothing
    local agent h
    set h = Handle()
endfunction